# cert

./: .gitignore  Makefile  README.md  REPORT.md  Untitled  colab_run.ipynb  pyproject.toml  requirements.txt
assets/attack_payloads/: authority_policy_update.txt  context_poisoning.txt  direct_override.txt  evidence_laundering.txt  footnote_injection.txt  goal_laundering.txt  helpful_assistant.txt  policy_mimicry.txt  subtle_redirect.txt  tool_schema_attack.txt
configs/: attacks.yaml  benchmark_v1.yaml  datasets.yaml  defenses.yaml  grid.yaml  grid_colab.yaml  grid_colab_small.yaml  grid_planner_executor.yaml  tools.yaml  verifier.yaml
docker/: Dockerfile  entrypoint.sh
docs/: CONCEPTS.md  PLAN.md  PROPOSAL_GAP.md  STATUS.md  TODO.md  proposal.tex
results (4)/: REPORT.md
results (4)/docs/: STATUS.md
results (5)/docs/: STATUS.md
results_small/: REPORT.md
results_small/docs/: PROPOSAL_GAP.md  (+1 more)
scripts/: 00_download_datasets.py  01_build_corpus.py  01_prepare_data.py  02_build_corpus.py  02_generate_tasks.py  03_inject_corpus.py  04_build_index.py  04_run_episode.py  05_run_grid.py  06_compute_metrics.py  07_plot_frontiers.py  07_run_all.sh  07b_plot_performance.py  08_plot_figures.py  08_show_defense_internals.py  09_make_pipeline_gif.py  09_proof_package.py  10_live_demo.py  10_plot_attack_example.py  11_generate_paper_figures.py  12_attack_trace_figure.py  13_attack_optimization.py  14_adaptive_attack_analysis.py  15_attack_figures.py  16_extended_results.py  17_formal_attack_optimization.py  18_lbad_correlation.py  19_planner_executor_experiment.py
(+70 files in other folders)
